--- a/config/polybar/config
+++ b/config/polybar/config
@@ -365,26 +365,26 @@ expand-right = true
 
 format-spacing = 1
 
-label-open =   Power
+label-open = Power
 label-open-foreground = ${colors.alert}
-label-close = Luk Menu
+label-close = Close Menu
 label-close-foreground = ${colors.secondary}
-label-separator = |
+label-separator = "	"
 label-separator-foreground = ${colors.foreground-alt}
 
-menu-0-0 = Genstart Computeren
+menu-0-0 = Reboot
 menu-0-0-exec = menu-open-1
-menu-0-1 = Sluk Computeren
+menu-0-1 = Shutdown
 menu-0-1-exec = menu-open-2
 
-menu-1-0 = Nej tilbage
+menu-1-0 = No back
 menu-1-0-exec = menu-open-0
-menu-1-1 = Genstart
+menu-1-1 = Reboot
 menu-1-1-exec = systemctl reboot
 
-menu-2-0 = Sluk Computeren
+menu-2-0 = Shutdown now
 menu-2-0-exec = systemctl poweroff
-menu-2-1 = Nej tilbage
+menu-2-1 = No back
 menu-2-1-exec = menu-open-0
 
 [settings]
