--- a/config/polybar/config
+++ b/config/polybar/config
@@ -55,10 +55,10 @@ border-size = 4
 border-color = #00000000
 
 padding-left = 0
-padding-right = 2
+padding-right = 4
 
 module-margin-left = 1
-module-margin-right = 2
+module-margin-right = 3
 
 ; Findt font name - fc-list | grep FONT NAME HER
 ; font-N = <fontconfig pattern>;<vertical offset>
@@ -81,15 +81,10 @@ tray-padding = 2
 ;tray-background = #0063ff
 
 wm-restack = bspwm
-;wm-restack = i3
-
 override-redirect = true
 
 ;scroll-up = bspwm-desknext
 ;scroll-down = bspwm-deskprev
-
-;scroll-up = i3wm-wsnext
-;scroll-down = i3wm-wsprev
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -245,7 +240,7 @@ date-alt = " %d-%m-%Y"
 time = %H:%M
 time-alt = %H:%M:%S
 
-format-prefix = 
+format-prefix = 
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #23334a
 
@@ -255,10 +250,10 @@ label = %time% %date%
 type = internal/pulseaudio
 
 format-volume = <label-volume> <bar-volume>
-label-volume = VOL %percentage%%
+label-volume =  %percentage%%
 label-volume-foreground = ${root.foreground}
 
-label-muted = 🔇 Lydløs
+label-muted = 婢  Lydløs
 label-muted-foreground = #FF0000
 
 bar-volume-width = 10
