--- a/config/polybar/config
+++ b/config/polybar/config
@@ -66,10 +66,6 @@ font-0 = "DejaVu Sans:pixelsize=10;2"
 font-1 = "Roboto:size=11:weight=bold;2"
 font-2 = "DejaVuSansMono Nerd Font:style=Book:size=12;2"
 
-;font-0 = fixed:pixelsize=10;1
-;font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
-;font-2 = siji:pixelsize=10;1
-
 modules-left = bspwm
 modules-center = mpd
 modules-right = pulseaudio cpu memory wlan eth date battery temperature powermenu
@@ -192,7 +188,7 @@ label = %percentage:2%%
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = " "
+format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #4bffdc
 label = %percentage_used%%
@@ -225,7 +221,7 @@ interface = enp1s0
 interval = 3.0
 
 format-connected-underline = #55aa55
-format-connected-prefix = " "
+format-connected-prefix = " "
 format-connected-prefix-foreground = ${colors.foreground-alt}
 label-connected = %local_ip%
 
@@ -255,10 +251,10 @@ label = %time% %date%
 type = internal/pulseaudio
 
 format-volume = <label-volume> <bar-volume>
-label-volume = VOL %percentage%%
+label-volume = 墳 VOL %percentage%%
 label-volume-foreground = ${root.foreground}
 
-label-muted = 🔇 Lydløs
+label-muted = 婢 Muted
 label-muted-foreground = #FF0000
 
 bar-volume-width = 10
@@ -282,12 +278,12 @@ bar-volume-empty-foreground = ${colors.foreground-alt}
 type = internal/alsa
 
 format-volume = <label-volume> <bar-volume>
-label-volume = VOL
+label-volume = 墳 VOL
 label-volume-foreground = ${root.foreground}
 
-format-muted-prefix = " "
+format-muted-prefix = "婢 "
 format-muted-foreground = ${colors.foreground-alt}
-label-muted = sound muted
+label-muted = muted
 
 bar-volume-width = 10
 bar-volume-foreground-0 = #55aa55
@@ -367,7 +363,7 @@ format-spacing = 1
 
 label-open = Power
 label-open-foreground = ${colors.alert}
-label-close = Close Menu
+label-close = ﬃ Close Menu
 label-close-foreground = ${colors.secondary}
 label-separator = "	"
 label-separator-foreground = ${colors.foreground-alt}
@@ -377,14 +373,14 @@ menu-0-0-exec = menu-open-1
 menu-0-1 = Shutdown
 menu-0-1-exec = menu-open-2
 
-menu-1-0 = No back
+menu-1-0 = ﬂ No back
 menu-1-0-exec = menu-open-0
 menu-1-1 = Reboot
 menu-1-1-exec = systemctl reboot
 
-menu-2-0 = Shutdown now
+menu-2-0 =  Shutdown now
 menu-2-0-exec = systemctl poweroff
-menu-2-1 = No back
+menu-2-1 = ﬂ No back
 menu-2-1-exec = menu-open-0
 
 [settings]
