--- a/config/polybar/config
+++ b/config/polybar/config
@@ -63,11 +63,11 @@ module-margin-right = 3
 ; Findt font name - fc-list | grep FONT NAME HER
 ; font-N = <fontconfig pattern>;<vertical offset>
 font-0 = "DejaVu Sans:pixelsize=10;2"
-font-1 = "Roboto:size=11:weight=bold;2"
-font-2 = "DejaVuSansMono Nerd Font:style=Book:size=12;2"
+font-1 = "Material Icons:style=Regular:size=11;2"
+font-2 = "DejaVuSansMono Nerd Font:style=Book:size=11;2"
 
-modules-left = bspwm
-modules-center = mpd
+modules-left = bspwm mpd
+;modules-center = mpd
 modules-right = pulseaudio cpu memory wlan eth date battery temperature powermenu
 
 ; Models list - filesystem xbacklight alsa pulseaudio xkeyboard memory cpu wlan eth battery temperature date powermenu
@@ -93,7 +93,7 @@ label = %title:0:30:...%
 type = internal/xkeyboard
 blacklist-0 = num lock
 
-format-prefix = " "
+format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 format-prefix-underline = ${colors.secondary}
 
@@ -183,7 +183,7 @@ label = %percentage:2%%
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = " "
+format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #4bffdc
 label = %percentage_used%%
@@ -216,7 +216,7 @@ interface = enp1s0
 interval = 3.0
 
 format-connected-underline = #55aa55
-format-connected-prefix = " "
+format-connected-prefix = " "
 format-connected-prefix-foreground = ${colors.foreground-alt}
 label-connected = %local_ip%
 
@@ -246,10 +246,10 @@ label = %time% %date%
 type = internal/pulseaudio
 
 format-volume = <label-volume> <bar-volume>
-label-volume = 墳 VOL %percentage%%
+label-volume =  VOL %percentage%%
 label-volume-foreground = ${root.foreground}
 
-label-muted = 婢 Muted
+label-muted =  Muted
 label-muted-foreground = #FF0000
 
 bar-volume-width = 10
@@ -356,24 +356,24 @@ expand-right = true
 
 format-spacing = 1
 
-label-open = Power
+label-open = 
 label-open-foreground = ${colors.alert}
-label-close = ﬃ Close Menu
+label-close = 
 label-close-foreground = ${colors.secondary}
 label-separator = "	"
 label-separator-foreground = ${colors.foreground-alt}
 
-menu-0-0 = Reboot
+menu-0-0 = 
 menu-0-0-exec = menu-open-1
-menu-0-1 = Shutdown
+menu-0-1 = 
 menu-0-1-exec = menu-open-2
 
 menu-1-0 = ﬂ No back
 menu-1-0-exec = menu-open-0
-menu-1-1 = Reboot
+menu-1-1 = 
 menu-1-1-exec = systemctl reboot
 
-menu-2-0 =  Shutdown now
+menu-2-0 = 
 menu-2-0-exec = systemctl poweroff
 menu-2-1 = ﬂ No back
 menu-2-1-exec = menu-open-0
