EDIT FOR TESTING

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -204,7 +204,7 @@ cursor_stop_blinking_after 15.0
 
 #: Scrollback {{{
 
-scrollback_lines 2000
+scrollback_lines 5000
 
 #: Number of lines of history to keep in memory for scrolling back.
 #: Memory is allocated on demand. Negative numbers are (effectively)
@@ -298,7 +298,7 @@ url_excluded_characters
 #: URLs under the mouse cursor. By default, all characters legal in
 #: URLs are allowed.
 
-copy_on_select no
+copy_on_select yes
 
 #: Copy to clipboard or a private buffer on select. With this set to
 #: clipboard, simply selecting text with the mouse will cause the text
@@ -466,7 +466,7 @@ sync_to_monitor yes
 
 #: Terminal bell {{{
 
-enable_audio_bell yes
+enable_audio_bell no
 
 #: Enable/disable the audio bell. Useful in environments that require
 #: silence.
@@ -496,8 +496,8 @@ command_on_bell none
 #: Window layout {{{
 
 remember_window_size  yes
-initial_window_width  640
-initial_window_height 400
+initial_window_width  800
+initial_window_height 500
 
 #: If enabled, the window size will be remembered so that new
 #: instances of kitty will have the same size as the previous
@@ -733,8 +733,8 @@ tab_bar_background none
 
 #: Color scheme {{{
 
-foreground #dddddd
-background #000000
+foreground #ededed
+background #151a1c
 
 #: The foreground and background colors
 
@@ -808,45 +808,38 @@ selection_background #fffacd
 #: dull and bright version, for the first 16 colors. You can set the
 #: remaining 240 colors as color16 to color255.
 
+#: black
 color0 #000000
 color8 #767676
 
-#: black
-
+#: red
 color1 #cc0403
 color9 #f2201f
 
-#: red
-
-color2  #19cb00
-color10 #23fd00
-
 #: green
-
-color3  #cecb00
-color11 #fffd00
+color2  #66cb00
+color10 #2ad10f
 
 #: yellow
+color3  #FFFF00
+color11 #fffd00
 
+#: blue
 color4  #0d73cc
 color12 #1a8fff
 
-#: blue
-
+#: magenta
 color5  #cb1ed1
 color13 #fd28ff
 
-#: magenta
-
+#: cyan
 color6  #0dcdcd
 color14 #14ffff
 
-#: cyan
-
-color7  #dddddd
+#: white
+color7  #f0f0f0
 color15 #ffffff
 
-#: white
 
 mark1_foreground black
 
