--- a/config/polybar/config
+++ b/config/polybar/config
@@ -35,6 +35,7 @@ foreground-alt = #555
 primary = #035a99
 secondary = #0d4f8c
 alert = #e31b37
+icon-c1 = #fafafa
 c1 = #fafafa
 c2 = #484c4f
 
@@ -178,7 +179,7 @@ card = intel_backlight
 type = internal/cpu
 interval = 3
 format-prefix = "   "
-format-prefix-foreground = ${colors.c1}
+format-prefix-foreground = ${colors.icon-c1}
 format-underline = ${colors.c2}
 label = %percentage:2%%
 
@@ -186,7 +187,7 @@ label = %percentage:2%%
 type = internal/memory
 interval = 2
 format-prefix = "   "
-format-prefix-foreground = ${colors.foreground-alt}
+format-prefix-foreground = ${colors.icon-c1}
 format-underline = #4bffdc
 label = %percentage_used%%
 
@@ -219,7 +220,7 @@ interval = 3.0
 
 format-connected-underline = #55aa55
 format-connected-prefix = " "
-format-connected-prefix-foreground = ${colors.foreground-alt}
+format-connected-prefix-foreground = ${colors.icon-c1}
 label-connected = %local_ip%
 
 format-disconnected =
@@ -239,7 +240,7 @@ time = %H:%M
 time-alt = %H:%M:%S
 
 format-prefix = "   "
-format-prefix-foreground = ${colors.foreground-alt}
+format-prefix-foreground = ${colors.icon-c1}
 format-underline = #23334a
 
 label = %time% %date%
@@ -312,7 +313,7 @@ format-discharging = <animation-discharging> <label-discharging>
 format-discharging-underline = ${self.format-charging-underline}
 
 format-full-prefix = " "
-format-full-prefix-foreground = ${colors.foreground-alt}
+format-full-prefix-foreground = ${colors.icon-c1}
 format-full-underline = ${self.format-charging-underline}
 
 ramp-capacity-0 = 
@@ -344,7 +345,7 @@ format-warn-underline = ${self.format-underline}
 
 label =   %temperature-c%
 label-warn = %temperature-c%
-label-warn-foreground = ${colors.secondary}
+label-warn-foreground = ${colors.icon-c1}
 
 ramp-0 = 
 ramp-1 = 
@@ -361,7 +362,7 @@ format-spacing = 1
 label-open = 
 label-open-foreground = ${colors.alert}
 label-close = 
-label-close-foreground = ${colors.secondary}
+label-close-foreground = ${colors.icon-c1}
 label-separator = "	"
 label-separator-foreground = ${colors.foreground-alt}
 
