--- a/config/polybar/config
+++ b/config/polybar/config
@@ -360,7 +360,7 @@ expand-right = true
 format-spacing = 1
 
 label-open = 
-label-open-foreground = ${colors.alert}
+label-open-foreground = ${colors.icon-c1}
 label-close = 
 label-close-foreground = ${colors.icon-c1}
 label-separator = "	"
