--- a/config/polybar/config
+++ b/config/polybar/config
@@ -36,6 +36,11 @@ primary = #035a99
 secondary = #0d4f8c
 alert = #e31b37
 icon-c1 = #fafafa
+icon-c2 = #fafafa
+icon-c3 = #fafafa
+underline-c1 = #fafafa
+underline-c2 = #fafafa
+underline-c3 = #fafafa
 c1 = #fafafa
 c2 = #484c4f
 
@@ -67,8 +72,10 @@ module-margin-right = 3
 ; font-N = <fontconfig pattern>;<vertical offset>
 font-0 = "DejaVu Sans:pixelsize=11;2"
 font-1 = "DejaVu Sans:pixelsize=14;2"
-font-2 = "Material Icons:style=Regular:size=11;2"
-font-3 = "DejaVuSansMono Nerd Font:style=Book:size=11;2"
+font-2 = "Material Icons:style=Regular:size=12;2"
+font-3 = "DejaVuSansMono Nerd Font:style=Book:size=12;2"
+font-4 = "Font Awesome 5 Free:style=Regular:size=12;2"
+font-5 = "Font Awesome 6 Free:style=Regular:size=12;2"
 
 modules-left = bspwm mpd
 ;modules-center = mpd
@@ -119,27 +126,94 @@ label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.foreground-alt}
 
+; ########################
+; ##### BSPWM MODULE #####
+; ########################
+
+;[module/bspwm]
+;type = internal/bspwm
+
+;label-focused = %index%
+;label-focused-background = ${colors.background-alt}
+;label-focused-underline= ${colors.primary}
+;label-focused-padding = 2
+
+;label-occupied = %index%
+;label-occupied-padding = 2
+
+;label-urgent = %index%!
+;label-urgent-background = ${colors.alert}
+;label-urgent-padding = 2
+
+;label-empty = %index%
+;label-empty-foreground = ${colors.foreground-alt}
+;label-empty-padding = 2
+
+; Separator in between workspaces ON / OFF
+; label-separator = |
+
 [module/bspwm]
 type = internal/bspwm
 
-label-focused = %index%
-label-focused-background = ${colors.background-alt}
-label-focused-underline= ${colors.primary}
+enable-click = true
+enable-scroll = true
+;reverse-scroll = true
+pin-workspaces = true
+
+ws-icon-0 = 1;
+ws-icon-1 = 2;
+ws-icon-2 = 3;
+ws-icon-3 = 4;
+ws-icon-4 = 5;
+ws-icon-5 = 6;
+ws-icon-6 = 7;
+ws-icon-7 = 8;
+ws-icon-8 = 9;
+ws-icon-9 = 10;
+ws-icon-default = " "
+
+
+format = <label-state> <label-mode>
+
+label-focused = %icon%
+label-focused-background = ${colors.background}
+label-focused-underline= ${colors.underline-c1}
 label-focused-padding = 2
+label-focused-foreground = ${colors.icon-c1}
 
-label-occupied = %index%
+label-occupied = %icon%
 label-occupied-padding = 2
+label-occupied-background = ${colors.background}
 
-label-urgent = %index%!
-label-urgent-background = ${colors.alert}
+label-urgent = %icon%
 label-urgent-padding = 2
 
-label-empty = %index%
-label-empty-foreground = ${colors.foreground-alt}
+label-empty = %icon%
+label-empty-foreground = ${colors.foreground}
 label-empty-padding = 2
+label-empty-background = ${colors.background}
+label-monocle = "  "
+label-monocle-foreground = ${colors.foreground}
+label-tiled = "  "
+label-tiled-foreground = ${colors.foreground}
+label-fullscreen = "  "
+label-fullscreen-foreground = ${colors.foreground}
+label-floating = "  "
+label-floating-foreground = ${colors.foreground}
+label-pseudotiled = "  "
+label-pseudotiled-foreground = ${colors.foreground}
+label-locked = "  "
+label-locked-foreground = ${colors.foreground}
+label-sticky = "  "
+label-sticky-foreground = ${colors.foreground}
+label-private =  "     "
+label-private-foreground = ${colors.foreground}
 
 ; Separator in between workspaces
-; label-separator = |
+;label-separator = |
+;label-separator-padding = 10
+;label-separator-foreground = #ffb52a
+
 
 [module/mpd]
 type = internal/mpd
