--- a/config/polybar/config
+++ b/config/polybar/config
@@ -264,7 +264,7 @@ type = internal/memory
 interval = 2
 format-prefix = "   "
 format-prefix-foreground = ${colors.icon-c1}
-format-underline = #4bffdc
+format-underline = #486352
 label = %percentage_used%%
 
 [module/wlan]
