--- a/config/polybar/config
+++ b/config/polybar/config
@@ -437,7 +437,7 @@ format-spacing = 1
 
 label-open = 
 label-open-foreground = ${colors.icon-c1}
-label-close = 
+label-close = x
 label-close-foreground = ${colors.icon-c1}
 label-separator = "	"
 label-separator-foreground = ${colors.foreground-alt}
