--- a/config/polybar/config
+++ b/config/polybar/config
@@ -43,6 +43,14 @@ underline-c2 = #fafafa
 underline-c3 = #fafafa
 c1 = #fafafa
 c2 = #484c4f
+c3 = #44525c
+c4 = #23272e
+c5 = #6cb349
+c6 = #903ea8
+c7 = #f5d133
+c8 = #eb6e34
+c9 = #d15213
+
 
 [bar/bspwmbar]
 ;monitor = ${env:MONITOR:HDMI-1}
@@ -59,7 +67,8 @@ foreground = ${colors.foreground}
 line-size = 3
 line-color = #f00
 
-border-size = 4
+# Option to provide a transparent can in x number of Pixels or a solid color around polubar
+border-size = 0
 border-color = #00000000
 
 padding-left = 0
@@ -161,17 +170,17 @@ enable-scroll = true
 ;reverse-scroll = true
 pin-workspaces = true
 
-ws-icon-0 = 1;
-ws-icon-1 = 2;
-ws-icon-2 = 3;
-ws-icon-3 = 4;
-ws-icon-4 = 5;
-ws-icon-5 = 6;
+ws-icon-0 = 1;
+ws-icon-1 = 2;
+ws-icon-2 = 3;
+ws-icon-3 = 4;
+ws-icon-4 = 5;
+ws-icon-5 = 6;
 ws-icon-6 = 7;
-ws-icon-7 = 8;
-ws-icon-8 = 9;
-ws-icon-9 = 10;
-ws-icon-default = " "
+ws-icon-7 = 8;
+ws-icon-8 = 9;
+ws-icon-9 = 10;
+ws-icon-default = ""
 
 
 format = <label-state> <label-mode>
@@ -254,7 +263,7 @@ card = intel_backlight
 [module/cpu]
 type = internal/cpu
 interval = 3
-format-prefix = "   "
+format-prefix = "   "
 format-prefix-foreground = ${colors.icon-c1}
 format-underline = ${colors.c2}
 label = %percentage:2%%
@@ -295,7 +304,7 @@ interface = enp1s0
 interval = 3.0
 
 format-connected-underline = #55aa55
-format-connected-prefix = " "
+format-connected-prefix = " "
 format-connected-prefix-foreground = ${colors.icon-c1}
 label-connected = %local_ip%
 
