--- a/config/polybar/config
+++ b/config/polybar/config
@@ -79,12 +79,14 @@ module-margin-right = 3
 
 ; Findt font name - fc-list | grep FONT NAME HER
 ; font-N = <fontconfig pattern>;<vertical offset>
-font-0 = "DejaVu Sans:pixelsize=11;2"
-font-1 = "DejaVu Sans:pixelsize=14;2"
-font-2 = "Material Icons:style=Regular:size=12;2"
-font-3 = "DejaVuSansMono Nerd Font:style=Book:size=12;2"
-font-4 = "Font Awesome 5 Free:style=Regular:size=12;2"
-font-5 = "Font Awesome 6 Free:style=Regular:size=12;2"
+font-0 = "DejaVu Sans:size=11;2"
+font-1 = "DejaVu Sans:size=14;2"
+font-2 = "Font Awesome 6 Free:style=Regular:size=12;2"
+font-3 = "Font Awesome 5 Free:style=Regular:size=12;2"
+font-4 = "Material Icons:style=Regular:size=12;2"
+font-5 = "DejaVuSansMono Nerd Font:style=Book:size=12;2"
+
+;# font-6 = "DejaVu Sans:size=11;2"
 
 modules-left = bspwm mpd
 ;modules-center = mpd
