--- a/config/polybar/config
+++ b/config/polybar/config
@@ -71,10 +71,10 @@ line-color = #f00
 border-size = 0
 border-color = #00000000
 
-padding-left = 0
-padding-right = 4
+padding-left = 2
+padding-right = 2
 
-module-margin-left = 1
+module-margin-left = 0
 module-margin-right = 3
 
 ; Findt font name - fc-list | grep FONT NAME HER
@@ -141,48 +141,49 @@ label-unmounted-foreground = ${colors.foreground-alt}
 ; ##### BSPWM MODULE #####
 ; ########################
 
-;[module/bspwm]
-;type = internal/bspwm
+[module/bspwm]
+type = internal/bspwm
 
-;label-focused = %index%
-;label-focused-background = ${colors.background-alt}
-;label-focused-underline= ${colors.primary}
-;label-focused-padding = 2
+label-focused = %index%
+label-focused-background = ${colors.background-alt}
+label-focused-underline= ${colors.primary}
+label-focused-padding = 2
 
-;label-occupied = %index%
-;label-occupied-padding = 2
+label-occupied = %index%
+label-occupied-padding = 2
 
-;label-urgent = %index%!
-;label-urgent-background = ${colors.alert}
-;label-urgent-padding = 2
+label-urgent = %index%!
+label-urgent-background = ${colors.alert}
+label-urgent-padding = 2
 
-;label-empty = %index%
-;label-empty-foreground = ${colors.foreground-alt}
-;label-empty-padding = 2
+label-empty = %index%
+label-empty-foreground = ${colors.foreground-alt}
+label-empty-padding = 2
 
 ; Separator in between workspaces ON / OFF
 ; label-separator = |
 
+;##########################
 ;# bspwm module new + icons
-[module/bspwm]
-type = internal/bspwm
+;[module/bspwm]
+;type = internal/bspwm
 
-enable-click = true
-enable-scroll = true
+;enable-click = true
+;enable-scroll = true
 ;reverse-scroll = true
-pin-workspaces = true
+;pin-workspaces = true
 
-ws-icon-0 = 1;
-ws-icon-1 = 2;
-ws-icon-2 = 3;
-ws-icon-3 = 4;
-ws-icon-4 = 5;
-ws-icon-5 = 6;
-ws-icon-6 = 7;
-ws-icon-7 = 8;
-ws-icon-8 = 9;
-ws-icon-9 = 10;
-ws-icon-default = ""
+;ws-icon-0 = 1;
+;ws-icon-1 = 2;
+;ws-icon-2 = 3;
+;ws-icon-3 = 4;
+;ws-icon-4 = 5;
+;ws-icon-5 = 6;
+;ws-icon-6 = 7;
+;ws-icon-7 = 8;
+;ws-icon-8 = 9;
+;ws-icon-9 = 10;
+;ws-icon-default = ""
 
 
 format = <label-state> <label-mode>
@@ -223,7 +224,7 @@ label-private-foreground = ${colors.foreground}
 
 ; Separator in between workspaces
 ;label-separator = |
-;label-separator-padding = 10
+;label-separator-padding = 1
 ;label-separator-foreground = #ffb52a
 
 
