--- a/config/polybar/config
+++ b/config/polybar/config
@@ -147,7 +147,7 @@ enable-scroll = false
 
 label-focused = %index%
 label-focused-background = ${colors.background-alt}
-label-focused-underline= ${colors.primary}
+label-focused-underline= ${colors.underline-c1}
 label-focused-padding = 2
 
 label-occupied = %index%
