--- a/config/polybar/config
+++ b/config/polybar/config
@@ -344,7 +344,7 @@ label = %time% %date%
 type = internal/pulseaudio
 
 format-volume = <label-volume> <bar-volume>
-label-volume =  VOL %percentage%%
+label-volume =  %percentage%%
 label-volume-foreground = ${root.foreground}
 
 label-muted =  Muted
