pin-workspaces = true

--- a/config/polybar/config
+++ b/config/polybar/config
@@ -142,6 +142,7 @@ label-unmounted-foreground = ${colors.foreground-alt}
 
 [module/bspwm]
 type = internal/bspwm
+pin-workspaces = true
 
 enable-scroll = false
 
