--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -23,7 +23,7 @@ bold_italic_font auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 12.0
+font_size 11.0
 
 #: Font size (in pts)
 
@@ -164,11 +164,11 @@ box_drawing_scale 0.001, 1, 1.5, 2
 
 #: Cursor customization {{{
 
-cursor #cccccc
+cursor #EBEBEB
 
 #: Default cursor color
 
-cursor_text_color #111111
+cursor_text_color #12151C
 
 #: Choose the color of text under the cursor. If you want it rendered
 #: with the background color of the cell underneath instead, use the
@@ -733,8 +733,8 @@ tab_bar_background none
 
 #: Color scheme {{{
 
-foreground #ededed
-background #151a1c
+foreground #EBEBEB
+background #0A1B2A
 
 #: The foreground and background colors
 
