--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -734,7 +734,7 @@ tab_bar_background none
 #: Color scheme {{{
 
 foreground #EBEBEB
-background #0A1B2A
+background #09141E
 
 #: The foreground and background colors
 
