--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -184,7 +184,7 @@ font:
 # Colors (Tomorrow Night)
 colors:
   # Default colors
-  #primary:
+  primary:
     background: '#09141E'
     foreground: '#EBEBEB'
 
