--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -1,10 +1,11 @@
 backend = "glx";
+# xrender glx xr_glx_hybrid
 glx-no-stencil = true;
 glx-copy-from-front = false;
 
 # Opacity
-active-opacity = 1;
-inactive-opacity = 1;
+active-opacity = 0.9;
+inactive-opacity = 0.8;
 frame-opacity = 1;
 inactive-opacity-override = false;
 blur-background = true;
