--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -1,4 +1,45 @@
+#################################
 ###      Martin - Config      ###
+#-------------------------------#
+#   Transparency / Opacity      #
+#################################
+
+# Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
+active-opacity = 0.93;
+
+# Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
+# inactive-opacity = 1
+inactive-opacity = 0.8;
+
+# Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
+# frame-opacity = 1.0;
+#frame-opacity = 0.7;
+
+# Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
+# inactive-opacity-override = true;
+#inactive-opacity-override = false;
+
+# Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
+# inactive-dim = 0.0;
+
+# Specify a list of conditions of windows that should never be considered focused.
+# focus-exclude = []
+#focus-exclude = [ "class_g = 'Cairo-clock'" ];
+
+# Use fixed inactive dim value, instead of adjusting according to window opacity.
+# inactive-dim-fixed = 1.0;
+
+# Specify a list of opacity rules, in the format `PERCENT:PATTERN`,
+# like `50:name *= "Firefox"`. picom-trans is recommended over this.
+# Note we don't make any guarantee about possible conflicts with other
+# programs that set '_NET_WM_WINDOW_OPACITY' on frame or client windows.
+# example:
+#    opacity-rule = [ "80:class_g = 'URxvt'" ];
+#
+# opacity-rule = []
+
+
+
 #################################
 #             Shadows           #
 #################################
@@ -8,35 +49,35 @@
 # (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow,
 # unless explicitly requested using the wintypes option.
 #
-# shadow = false
+#shadow = false;
 shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
-# shadow-radius = 12
-shadow-radius = 7;
+# shadow-radius = 12;
+shadow-radius = 14;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-# shadow-opacity = .75
+shadow-opacity = 0.3;
 
 # The left offset for shadows, in pixels. (defaults to -15)
-# shadow-offset-x = -15
-shadow-offset-x = -7;
+# shadow-offset-x = -15;
+shadow-offset-x = -15;
 
 # The top offset for shadows, in pixels. (defaults to -15)
-# shadow-offset-y = -15
-shadow-offset-y = -7;
+# shadow-offset-y = -15;
+shadow-offset-y = -15;
 
 # Red color value of shadow (0.0 - 1.0, defaults to 0).
-# shadow-red = 0
+# shadow-red = 0;
 
 # Green color value of shadow (0.0 - 1.0, defaults to 0).
-# shadow-green = 0
+# shadow-green = 0;
 
 # Blue color value of shadow (0.0 - 1.0, defaults to 0).
-# shadow-blue = 0
+# shadow-blue = 0;
 
 # Hex string color value of shadow (#000000 - #FFFFFF, defaults to #000000). This option will override options set shadow-(red/green/blue)
-# shadow-color = "#000000"
+# shadow-color = "#000000";
 
 # Specify a list of conditions of windows that should have no shadow.
 #
@@ -63,7 +104,7 @@ shadow-exclude = [
 # shadow-exclude-reg = ""
 
 # Crop shadow of a window fully on a particular Xinerama screen to the screen.
-# xinerama-shadow-crop = false
+# xinerama-shadow-crop = false;
 
 
 #################################
@@ -73,67 +114,28 @@ shadow-exclude = [
 
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
-# fading = false
+# fading = false;
 #fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
-# fade-in-step = 0.028
+# fade-in-step = 0.028;
 #fade-in-step = 0.03;
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
-# fade-out-step = 0.03
+# fade-out-step = 0.03;
 #fade-out-step = 0.03;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-# fade-delta = 10
+# fade-delta = 10;
 
 # Specify a list of conditions of windows that should not be faded.
 # fade-exclude = []
 
 # Do not fade on window open/close.
-# no-fading-openclose = false
+# no-fading-openclose = false;
 
 # Do not fade destroyed ARGB windows with WM frame. Workaround of bugs in Openbox, Fluxbox, etc.
-# no-fading-destroyed-argb = false
-
-
-#################################
-#   Transparency / Opacity      #
-#################################
-
-# Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-active-opacity = 0.93;
-
-# Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-# inactive-opacity = 1
-inactive-opacity = 0.8;
-
-# Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
-# frame-opacity = 1.0
-#frame-opacity = 0.7;
-
-# Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
-# inactive-opacity-override = true
-#inactive-opacity-override = false;
-
-# Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
-# inactive-dim = 0.0
-
-# Specify a list of conditions of windows that should never be considered focused.
-# focus-exclude = []
-#focus-exclude = [ "class_g = 'Cairo-clock'" ];
-
-# Use fixed inactive dim value, instead of adjusting according to window opacity.
-# inactive-dim-fixed = 1.0
-
-# Specify a list of opacity rules, in the format `PERCENT:PATTERN`,
-# like `50:name *= "Firefox"`. picom-trans is recommended over this.
-# Note we don't make any guarantee about possible conflicts with other
-# programs that set '_NET_WM_WINDOW_OPACITY' on frame or client windows.
-# example:
-#    opacity-rule = [ "80:class_g = 'URxvt'" ];
-#
-# opacity-rule = []
+# no-fading-destroyed-argb = false;
 
 
 #################################
@@ -143,7 +145,7 @@ inactive-opacity = 0.8;
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-#corner-radius = 0
+#corner-radius = 0;
 
 # Exclude conditions for rounded corners.
 #rounded-corners-exclude = [
@@ -159,28 +161,28 @@ inactive-opacity = 0.8;
 
 # Parameters for background blurring, see the *BLUR* section for more information.
 # blur-method =
-# blur-size = 12
+# blur-size = 12;
 #
-# blur-deviation = false
+# blur-deviation = false;
 #
-# blur-strength = 5
+# blur-strength = 5;
 
 # Blur background of semi-transparent / ARGB windows.
 # Bad in performance, with driver-dependent behavior.
 # The name of the switch may change without prior notifications.
-#
-# blur-background = false
+#blur-background = false;
+#blur-background = true;
 
 # Blur background of windows when the window frame is not opaque.
 # Implies:
 #    blur-background
 # Bad in performance, with driver-dependent behavior. The name may change.
 #
-# blur-background-frame = false
+# blur-background-frame = false;
 
 
 # Use fixed blur strength rather than adjusting according to window opacity.
-# blur-background-fixed = false
+# blur-background-fixed = false;
 
 
 # Specify the blur convolution kernel, with the following format:
@@ -204,7 +206,7 @@ blur-background-exclude = [
 #################################
 
 # Daemonize process. Fork to background after initialization. Causes issues with certain (badly-written) drivers.
-# daemon = false
+# daemon = false;
 
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
@@ -217,34 +219,34 @@ backend = "glx";
 #vsync = true;
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
-# dbus = false
+# dbus = false;
 
 # Try to detect WM windows (a non-override-redirect window with no
 # child that has 'WM_STATE') and mark them as active.
 #
-# mark-wmwin-focused = false
+#mark-wmwin-focused = false;
 #mark-wmwin-focused = true;
 
 # Mark override-redirect windows that doesn't have a child window with 'WM_STATE' focused.
-# mark-ovredir-focused = false
+# mark-ovredir-focused = false;
 #mark-ovredir-focused = true;
 
 # Try to detect windows with rounded corners and don't consider them
 # shaped windows. The accuracy is not very high, unfortunately.
 #
-# detect-rounded-corners = false
+# detect-rounded-corners = false;
 #detect-rounded-corners = true;
 
 # Detect '_NET_WM_OPACITY' on client windows, useful for window managers
 # not passing '_NET_WM_OPACITY' of client windows to frame windows.
 #
-# detect-client-opacity = false
+# detect-client-opacity = false;
 #detect-client-opacity = true;
 
 # Specify refresh rate of the screen. If not specified or 0, picom will
 # try detecting this with X RandR extension.
 #
-# refresh-rate = 60
+# refresh-rate = 60;
 #refresh-rate = 0;
 
 # Use EWMH '_NET_ACTIVE_WINDOW' to determine currently focused window,
