--- a/config/polybar/config
+++ b/config/polybar/config
@@ -26,10 +26,8 @@
 ;=========================================================================
 
 [colors]
-;background = ${xrdb:color0:#222}
 background = #F209141E
 background-alt = #09141E
-;foreground = ${xrdb:color7:#222}
 foreground = #ebebeb
 foreground-alt = #555
 primary = #333D53
@@ -65,9 +63,9 @@ background = ${colors.background}
 foreground = ${colors.foreground}
 
 line-size = 3
-line-color = #f00
+line-color = #dbdbdb
 
-;# Option to provide a transparent can in x number of Pixels or a solid color around polubar
+;# Ttransparent or Solid color border around Polybar. (Size in Pixels) 
 border-size = 0
 border-color = #00000000
 
@@ -89,7 +87,7 @@ font-5 = "DejaVuSansMono Nerd Font:style=Book:size=12;2"
 
 modules-left = bspwm xwindow
 ;modules-center = mpd
-modules-right = pulseaudio cpu memory wlan eth date temperature battery powermenu session
+modules-right = pulseaudio cpu memory wlan eth date temperature battery session
 
 ; Models list - filesystem xbacklight alsa pulseaudio xkeyboard memory cpu wlan eth battery temperature date powermenu
 
@@ -448,40 +446,11 @@ ramp-1 = 
 ramp-2 = 
 ramp-foreground = ${colors.foreground-alt}
 
-[module/powermenu]
-type = custom/menu
-
-expand-right = true
-
-format-spacing = 1
-
-label-open = 
-label-open-foreground = ${colors.icon-c1}
-label-close = x
-label-close-foreground = ${colors.icon-c1}
-label-separator = "	"
-label-separator-foreground = ${colors.foreground-alt}
-
-menu-0-0 = 
-menu-0-0-exec = menu-open-1
-menu-0-1 = 
-menu-0-1-exec = menu-open-2
-
-menu-1-0 = 
-menu-1-0-exec = menu-open-0
-menu-1-1 = 
-menu-1-1-exec = systemctl reboot
-
-menu-2-0 = 
-menu-2-0-exec = systemctl poweroff
-menu-2-1 = 
-menu-2-1-exec = menu-open-0
-
 
 [module/session]
 type = custom/text
 
-click-left = powermenu.sh
+click-left = ~/.config/rofi/powermenu.sh
 content = %{T4}%{T-}
 content-background = ${colors.shade-2}
 content-foreground = ${colors.shade-5}
