--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -5,11 +5,11 @@
 #################################
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-active-opacity = 0.93;
+active-opacity = 1.0;
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-# inactive-opacity = 1
-inactive-opacity = 0.8;
+# inactive-opacity = 1.0;
+inactive-opacity = 1.0;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0;
@@ -34,11 +34,14 @@ inactive-opacity = 0.8;
 # Note we don't make any guarantee about possible conflicts with other
 # programs that set '_NET_WM_WINDOW_OPACITY' on frame or client windows.
 # example:
-#    opacity-rule = [ "80:class_g = 'URxvt'" ];
+#     opacity-rule = [ "93:class_g = 'kitty' && focused" ];
+#     opacity-rule = [ "75:class_g = 'kitty' && !focused" ];
 #
-# opacity-rule = []
 
-
+opacity-rule = [ "93:class_g = 'kitty' && focused" ];
+opacity-rule = [ "75:class_g = 'kitty' && !focused" ];
+opacity-rule = [ "93:class_g = 'alacritty' && focused" ];
+opacity-rule = [ "75:class_g = 'alacritty' && !focused" ];
 
 #################################
 #             Shadows           #
