--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -4,6 +4,8 @@
 #   Transparency / Opacity      #
 #################################
 
+# Use the opacity-rule to git transparency.
+
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
 active-opacity = 1.0;
 
@@ -39,8 +41,8 @@ inactive-opacity = 1.0;
 #
 
 opacity-rule = [ "93:class_g = 'kitty' && focused" ];
-opacity-rule = [ "75:class_g = 'kitty' && !focused" ];
-opacity-rule = [ "93:class_g = 'alacritty' && focused" ];
+#opacity-rule = [ "75:class_g = 'kitty' && !focused" ];
+#opacity-rule = [ "93:class_g = 'alacritty' && focused" ];
 opacity-rule = [ "75:class_g = 'alacritty' && !focused" ];
 
 #################################
