--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -176,7 +176,7 @@ shadow-exclude = [
 # Bad in performance, with driver-dependent behavior.
 # The name of the switch may change without prior notifications.
 #blur-background = false;
-#blur-background = true;
+blur-background = true;
 
 # Blur background of windows when the window frame is not opaque.
 # Implies:
