--- a/config/polybar/config
+++ b/config/polybar/config
@@ -23,6 +23,9 @@
 ;
 ; https://github.com/polybar/polybar/wiki/Configuration
 ;
+; All transparence hex value from 100% to 0% alpha:
+; https://gist.github.com/lopspower/03fb1cc0ac9f32ef38f4#all-hex-value-from-100-to-0-alpha
+;
 ;=========================================================================
 
 [colors]
