--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -35,15 +35,26 @@ inactive-opacity = 1.0;
 # like `50:name *= "Firefox"`. picom-trans is recommended over this.
 # Note we don't make any guarantee about possible conflicts with other
 # programs that set '_NET_WM_WINDOW_OPACITY' on frame or client windows.
-# example:
-#     opacity-rule = [ "93:class_g = 'kitty' && focused" ];
-#     opacity-rule = [ "75:class_g = 'kitty' && !focused" ];
+# examples:
+#     opacity-rule = [ "93:class_g = 'kitty'" ];
+#
+# More than one rule must be in several lines...
+# and there is also whether there is Focused or Unfocused.
+#
+#opacity-rule = [
+#  "95:class_g = 'kitty' && focused",
+#  "75:class_g = 'kitty' && !focused",
+#  "95:class_g = 'alacritty' && focused",
+#  "75:class_g = 'alacritty' && !focused"
+#];
 #
 
-opacity-rule = [ "93:class_g = 'kitty' && focused" ];
-#opacity-rule = [ "75:class_g = 'kitty' && !focused" ];
-#opacity-rule = [ "93:class_g = 'alacritty' && focused" ];
-opacity-rule = [ "75:class_g = 'alacritty' && !focused" ];
+opacity-rule = [
+  "95:class_g = 'kitty' && focused",
+  "75:class_g = 'kitty' && !focused",
+  "95:class_g = 'alacritty' && focused",
+  "75:class_g = 'alacritty' && !focused"
+];
 
 #################################
 #             Shadows           #
