--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -50,6 +50,7 @@ inactive-opacity = 1.0;
 #
 
 opacity-rule = [
+  "95:class_g = 'Rofi'",
   "95:class_g = 'kitty' && focused",
   "75:class_g = 'kitty' && !focused",
   "95:class_g = 'alacritty' && focused",
