--- a/config/polybar/config
+++ b/config/polybar/config
@@ -80,8 +80,8 @@ module-margin-right = 3
 
 ; Findt font name - fc-list | grep FONT NAME HER
 ; font-N = <fontconfig pattern>;<vertical offset>
-font-0 = "DejaVu Sans:size=11;2"
-font-1 = "DejaVu Sans:size=14;2"
+font-0 = "FiraCode Nerd Font:size=11;2"
+font-1 = "DejaVu Sans:size=11;2"
 font-2 = "Font Awesome 6 Free:style=Regular:size=12;2"
 font-3 = "Font Awesome 5 Free:style=Regular:size=12;2"
 font-4 = "Material Icons:style=Regular:size=12;2"
@@ -144,7 +144,6 @@ label-unmounted-foreground = ${colors.foreground-alt}
 [module/bspwm]
 type = internal/bspwm
 pin-workspaces = true
-
 enable-scroll = false
 
 label-focused = %index%
@@ -350,16 +349,16 @@ label-volume =  %percentage%%
 label-volume-foreground = ${root.foreground}
 
 label-muted =  Muted
-label-muted-foreground = #FF0000
+label-muted-foreground = #cf0a0a
 
 bar-volume-width = 10
-bar-volume-foreground-0 = #55aa55
-bar-volume-foreground-1 = #55aa55
-bar-volume-foreground-2 = #55aa55
-bar-volume-foreground-3 = #55aa55
-bar-volume-foreground-4 = #55aa55
-bar-volume-foreground-5 = #f5a70a
-bar-volume-foreground-6 = #ff5555
+bar-volume-foreground-0 = #769c76
+bar-volume-foreground-1 = #769c81
+bar-volume-foreground-2 = #769c8d
+bar-volume-foreground-3 = #76979c
+bar-volume-foreground-4 = #768c9c
+bar-volume-foreground-5 = #768c9c
+bar-volume-foreground-6 = #c74040
 bar-volume-gradient = false
 bar-volume-indicator = |
 bar-volume-indicator-font = 2
