--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -215,6 +215,14 @@ blur-kern = "7x7box";
 blur-background-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'",
+	"window_type = 'utility'",
+	"window_type = 'dialog'",
+	"window_type = 'popup_menu'", #start_menu
+	"window_type = 'menu'",
+	"window_type = 'dropdown_menu'",
+	"window_type = 'tooltip'",
+	"window_type = 'splash'",
+	"class_g = 'slop'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
@@ -430,9 +438,9 @@ log-level = "warn";
 #
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
+  tooltip = { fade = true; shadow = true; opacity = 0.95; focus = true; full-shadow = false; };
   dock = { shadow = false; clip-shadow-above = true; }
   dnd = { shadow = false; }
-  popup_menu = { opacity = 0.8; }
-  dropdown_menu = { opacity = 0.8; }
+  popup_menu = { opacity = 1.0; }
+  dropdown_menu = { opacity = 1.0; }
 };
