--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -47,10 +47,10 @@ inactive-opacity = 1.0;
 #  "95:class_g = 'alacritty' && focused",
 #  "75:class_g = 'alacritty' && !focused"
 #];
-#
+# Remember not to add comma "," to the last rule... but it must be at the end of all others.
 
 opacity-rule = [
-  "95:class_g = 'Rofi'",
+  "92:class_g = 'Rofi'",
   "95:class_g = 'kitty' && focused",
   "75:class_g = 'kitty' && !focused",
   "95:class_g = 'alacritty' && focused",
