Alacritty opacity (picom rule)

--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -53,8 +53,8 @@ opacity-rule = [
   "92:class_g = 'Rofi'",
   "95:class_g = 'kitty' && focused",
   "75:class_g = 'kitty' && !focused",
-  "95:class_g = 'alacritty' && focused",
-  "75:class_g = 'alacritty' && !focused"
+  "95:class_g = 'Alacritty' && focused",
+  "75:class_g = 'Alacritty' && !focused"
 ];
 
 #################################
