--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -44,8 +44,8 @@ inactive-opacity = 1.0;
 #opacity-rule = [
 #  "95:class_g = 'kitty' && focused",
 #  "75:class_g = 'kitty' && !focused",
-#  "95:class_g = 'alacritty' && focused",
-#  "75:class_g = 'alacritty' && !focused"
+#  "95:class_g = 'Alacritty' && focused",
+#  "75:class_g = 'Alacritty' && !focused"
 #];
 # Remember not to add comma "," to the last rule... but it must be at the end of all others.
 
