various small things

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -164,17 +164,17 @@ box_drawing_scale 0.001, 1, 1.5, 2
 
 #: Cursor customization {{{
 
-cursor #EBEBEB
+cursor #f2f2f2
 
 #: Default cursor color
 
-cursor_text_color #12151C
+cursor_text_color #f2f2f2
 
 #: Choose the color of text under the cursor. If you want it rendered
 #: with the background color of the cell underneath instead, use the
 #: special keyword: background
 
-cursor_shape block
+cursor_shape underline
 
 #: The cursor shape can be one of (block, beam, underline). Note that
 #: when reloading the config this will be changed only if the cursor
@@ -195,7 +195,7 @@ cursor_blink_interval -1
 #: that numbers smaller than repaint_delay will be limited to
 #: repaint_delay.
 
-cursor_stop_blinking_after 15.0
+cursor_stop_blinking_after 99.0
 
 #: Stop blinking cursor after the specified number of seconds of
 #: keyboard inactivity.  Set to zero to never stop blinking.
@@ -553,7 +553,7 @@ single_window_margin_width -1
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
-window_padding_width 0
+window_padding_width 3
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -569,7 +569,7 @@ placement_strategy center
 #: placed centrally. A value of top-left means the padding will be on
 #: only the bottom and right edges.
 
-active_border_color #00ff00
+active_border_color #f2f2f2
 
 #: The color for the border of the active window. Set this to none to
 #: not draw borders around the active window.
@@ -678,7 +678,7 @@ tab_fade 0.25 0.5 0.75 1
 #: can change the number of cells used by adding/removing entries to
 #: this list.
 
-tab_separator " ┇"
+tab_separator " |"
 
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
@@ -733,7 +733,7 @@ tab_bar_background none
 
 #: Color scheme {{{
 
-foreground #EBEBEB
+foreground #f2f2f2
 background #09141E
 
 #: The foreground and background colors
@@ -1211,7 +1211,7 @@ map kitty_mod+h         show_scrollback
 
 #: Window management {{{
 
-map kitty_mod+enter new_window
+#map kitty_mod+enter new_window
 
 #: You can open a new window running an arbitrary program, for
 #: example::
@@ -1238,7 +1238,7 @@ map kitty_mod+enter new_window
 
 #: For more details, see launch.
 
-map kitty_mod+n new_os_window
+#map kitty_mod+n new_os_window
 
 #: Works like new_window above, except that it opens a top level OS
 #: kitty window. In particular you can use new_os_window_with_cwd to
