--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -262,6 +262,8 @@ touch_scroll_multiplier 1.0
 
 mouse_hide_wait 3.0
 
+mouse_map right click paste_from_clipboard
+
 #: Hide mouse cursor after the specified number of seconds of the
 #: mouse not being used. Set to zero to disable mouse cursor hiding.
 #: Set to a negative value to hide the mouse cursor immediately when
@@ -415,7 +417,7 @@ mouse_map ctrl+alt+left triplepress ungrabbed mouse_selection line_from_point
 
 #: Select from the clicked point to the end of the line
 
-mouse_map right               press ungrabbed mouse_selection extend
+#mouse_map right               press ungrabbed mouse_selection extend
 mouse_map shift+middle        release ungrabbed,grabbed paste_selection
 mouse_map shift+left          press ungrabbed,grabbed mouse_selection normal
 mouse_map shift+ctrl+alt+left press ungrabbed,grabbed mouse_selection rectangle
@@ -1137,8 +1139,8 @@ linux_display_server auto
 
 #:     map ctrl+f>2 set_font_size 20
 
-#kitty_mod ctrl+shift
-kitty_mod ctrl
+kitty_mod ctrl+shift
+#kitty_mod ctrl
 
 #: The value of kitty_mod is used as the modifier for all default
 #: shortcuts, you can change it in your kitty.conf to change the
@@ -1169,8 +1171,8 @@ map kitty_mod+c copy_to_clipboard
 #: no selection.
 
 map kitty_mod+v paste_from_clipboard
-map kitty_mod+s paste_from_selection
-map kitty_mod+o pass_selection_to_program
+#map kitty_mod+s paste_from_selection
+#map kitty_mod+o pass_selection_to_program
 
 #: You can also pass the contents of the current selection to any
 #: program using pass_selection_to_program. By default, the system's
@@ -1462,4 +1464,3 @@ map kitty_mod+f6 debug_config
 #: }}}
 
 #: }}}
-
