flameshot gui + <bar-volume>

--- a/config/polybar/config
+++ b/config/polybar/config
@@ -294,7 +294,7 @@ label = %time% %date%
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume = <label-volume> <bar-volume>
+format-volume = <label-volume>
 label-volume = 墳 %percentage%%
 label-volume-foreground = ${root.foreground}
 
